Agregando detalles | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -38,11 +38,11 @@ Otro aspecto importante en el diseño de la capa de enlace de datos es qué hace
 - **Control de flujo basado en tasa**: El protocolo de la capa de enlace posee un mecanismo integrado que limita la tasa a la que el emisor puede transmitir los datos, sin recurrir a la retroalimentación por parte del receptor.
 
 El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal. 
-En este protocolo tanto el emisor como el receptor tienen una “ventana” que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un número $w$ de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía ACKs para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
+En este protocolo tanto el emisor como el receptor tienen una “ventana” que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un número $w$ de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía una confirmación para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
 Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación, pero no tiene datos para enviar, se enviará una trama de confirmación.
 
 >[!tldr] Envió de Tramas de Confirmación
->A la hora de enviar ACK al emisor, el receptor no necesita enviar una confirmación individual para todas las tramas, solo basta con enviar cuál es el número de secuencia de la trama que está esperando (Receive Ready).
+>A la hora de enviar ACK al emisor, el receptor no necesita enviar una confirmación individual para todas las tramas, solo basta con enviar cuál es el número de secuencia de la siguiente trama que el receptor espera recibir (Receive Ready).
 >La mayoría de los protocolos también permiten que cualquiera de los participantes pueda interrumpir totalmente la transmisión de tramas desde el otro extremo a través de un mensaje especial (Receive Not Ready).
 
 ### Control de Errores
@@ -54,15 +54,16 @@ El control de errores hace referencia a los mecanismos necesarios para la detecc
 
 Estos mecanismos se denominan genéricamente ***solicitud de repetición automática (ARQ)***; el objetivo de estos esquemas es convertir un enlace de datos no fiable en fiable. Hay tres variantes ARQ estandarizadas:
 1. **ARQ con parada y espera**: El emisor transmite una única trama y espera la confirmación (ACK) antes de enviar otra. Si la confirmación se pierde, un temporizador obliga al emisor a retransmitir la trama para evitar una espera infinita.
-2. **ARQ con adelante-atrás N**: El emisor envía una serie de tramas numeradas secuencialmente hasta un valor máximo. Si no hay errores en ninguna de las tramas, el receptor confirma las tramas recibidas, en caso contrario, el receptor envía una confirmación negativa (REJ), para posteriormente descartando la trama errónea y todas las siguientes hasta recibir la trama correcta. Al recibir la confirmación negativa, el emisor debe retransmitir la trama errónea y todas las posteriores.
-3. **ARQ con rechazo selectivo**: El emisor solo retransmite las tramas que reciben una confirmación negativa (SREJ) por parte del receptor o aquellas cuyo temporizador haya expirado.
+2. **ARQ con adelante-atrás N**: El emisor envía una serie de tramas numeradas secuencialmente. Si no hay errores en ninguna de las tramas, el receptor confirma las tramas recibidas, en caso contrario, el receptor envía una confirmación negativa (REJ), para posteriormente descartando la trama errónea y todas las tramas que le siguen a esta. El emisor al recibir la confirmación negativa debe retransmitir las tramas desde la trama errónea en adelante, siempre respetando el tamaño de ventana seleccionado.
+3. **ARQ con rechazo selectivo**: El emisor solo retransmite las tramas de la cual recibe una confirmación negativa (SREJ) por parte del receptor o aquellas cuyo temporizador haya expirado.
 
 >[!tldr] Eficiencia del Rechazo Selectivo
 >El rechazo selectivo puede parecer más eficiente que la adelante-atrás-N, ya que minimiza las retransmisiones. Sin embargo, el receptor necesita memoria temporal suficiente para almacenar las tramas posteriores a una SREJ y lógica adicional para reinsertar la trama corregida. Asimismo, el transmisor requiere lógica más compleja para enviar tramas fuera de orden. Estas complicaciones hacen que el rechazo selectivo se use menos que adelante-atrás-N, aunque es común en enlaces satelitales debido al alto retardo de propagación.
 
-Existe una relación entre los distintos métodos ARQ y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelante-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada, puesto que se necesita mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
+Existe una relación entre los distintos métodos ARQ y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelante-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas.
+El esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada, puesto que se necesita mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
 #### Técnicas para la Detección de Errores
-Las técnicas de detección de errores permiten al receptor detectar los errores que se han producido en los bits de las tramas. Aunque se utilicen bits de detección de errores, puede que sigan existiendo errores que no han sido detectados. Por tanto, intentaremos elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Cuanto más sofisticadas son las técnicas de detección de errores mayores son los recursos adicionales necesarios.
+Las técnicas de detección de errores permiten al receptor detectar los errores que se han producido en los bits de las tramas. Aunque se utilicen bits de detección de errores, puede que sigan existiendo errores que no han sido detectados. Por esta razón se intenta elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Cuanto más sofisticadas son las técnicas de detección de errores mayores son los recursos adicionales necesarios.
 ##### Comprobación de Paridad
 Utiliza un **bit de paridad** para detectar errores en el flujo de bits de las tramas. Este bit de paridad no es más que un bit adicional que el emisor pone al final de la carga útil de la trama. Dependiendo del tipo de paridad elegida la cantidad de unos de la carga útil más este bit será par o impar.
 Un problema con este esquema es que un solo bit de paridad puede detectar de manera confiable un único error de un solo bit en el bloque. Si el bloque está muy confuso debido a una ráfaga de errores larga, la probabilidad de detectar ese error es solo del 50%, lo cual no es aceptable.
@@ -72,7 +73,7 @@ En las técnicas de suma de comprobación, los $d$ bits de datos se tratan como 
 Este tipo de métodos son eficientes y simples, pero ofrece una protección débil en algunos casos, precisamente debido a que es una suma simple. Existe una mejora a este método el cual es la ***suma de comprobación de Fletcher*** que incluye un componente posicional, en donde se suma el producto de los datos y su posición con la suma acumulada. Este método ofrece una detección más poderosa de los cambios en la posición de los datos.
 ##### Comprobación de Redundancia Cíclica
 Una técnica detección de errores utilizada ampliamente en las redes actuales está basada en los ***códigos de comprobación de redundancia cíclica (CRC)***.
-Los códigos CRC operan de la siguiente manera. Considere una secuencia de datos $D$ con una longitud de $d$ bits, que el emisor quiere transmitir. Antes de la transmisión el emisor y el receptor acuerdan un patrón $G$ de $r + 1$ bits, conocido como **polinomio generador**. Para una determinada secuencia de datos $D$, el emisor seleccionará $r$ bits adicionales y se los añadirá a $D$, de modo que el patrón de $d + r$ bits resultante sea exactamente divisible por $G$ utilizando aritmética en módulo 2.
+Considere una secuencia de datos $D$ con una longitud de $d$ bits, que el emisor quiere transmitir. Antes de la transmisión el emisor y el receptor acuerdan un patrón $G$ de $r + 1$ bits, conocido como **polinomio generador**. Para una determinada secuencia de datos $D$, el emisor selecciona $r$ bits (0) adicionales, por lo general la misma cantidad de bits que el grado del polinomio, y se los añadirá a $D$, de modo que el patrón de $d + r$ bits resultante sea exactamente divisible por $G$ utilizando aritmética en módulo 2. El resto de esta operación se agrega al final de la trama para realizar la detección de errores.
 Para realizar el proceso de comprobación de errores, el receptor divide los $d + r$ bits recibidos entre $G$. Si el resto es distinto de cero, el receptor sabrá que se ha producido error; en caso contrario, se aceptarán los datos como correctos. Cada uno de los estándares de CRC puede detectar ráfagas de errores inferiores a $r + 1$ bits. Además, en las condiciones adecuadas, una ráfaga de longitud superior a $r + 1$ bits será detectada con una probabilidad de $1 – \ 0.5^r$.
 #### Técnicas Para la Corrección de Errores
 Todas las técnicas de corrección de errores agregan cierta redundancia en las tramas enviadas de forma tal que el receptor al detectar un error puede corregirlo en ese mismo instante. Entre los códigos utilizados para la corrección de errores se encuentran los siguientes:
@@ -99,11 +100,11 @@ Como veremos más adelante los distintos tipos de redes tienen sus propios proto
 >	2. Están limitados por el conjunto de caracteres que pueden utilizar, lo que puede ser un problema en sistemas que manejan datos binarios complejos.
 
 ### High-Level Data Link Control (HDLC)
-Uno de los protocolos más relevantes de la capa de enlace de datos es HDLC. No solo porque fue ampliamente utilizado, sino también porque estableció las bases para el resto de protocolos, en los que se usan los mismos formatos o similares, y los mismos procedimientos que los empleados en HDLC.
+Uno de los protocolos más relevantes de la capa de enlace de datos es HDLC. No solo porque fue ampliamente utilizado, sino también porque estableció las bases para el resto de protocolos, en los que se usan formatos de trama idénticos o similares, y los mismos o similares procedimientos que los empleados en HDLC.
 Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de estaciones, dos configuraciones del enlace y tres modos de operación para la transferencia de los datos.
 - **Tipos de estaciones**:
 	- **Estación primaria**: Es la responsable de controlar el funcionamiento del enlace. Las tramas generadas por la estación primaria se denominan órdenes.
-	- **Estación secundaria**: Funciona bajo el control de la estación primaria. Las tramas generadas por la estación secundaria se denominan respuestas. La primaria establece un enlace lógico independiente con cada una de las secundarias presentes en la línea.
+	- **Estación secundaria**: Funciona bajo el control de la estación primaria. Las tramas generadas por la estación secundaria se denominan respuestas.
 	- **Estación combinada**: Combina las características de las primarias y de las secundarias, pudiendo generar tanto órdenes como respuestas.
 - **Configuraciones de enlace**:
 	- **Configuración no balanceada**: Está formada por una estación primaria, y una o más secundarias. Permite tanto transmisión *full-duplex* como *half-duplex*.
@@ -153,3 +154,6 @@ La desconexión puede ser llevada acabo por cualquiera de las entidades, tanto p
 Dado que existen tanto direcciones IP como direcciones físicas, surge la necesidad de realizar una traducción o correspondencia entre ellas. El protocolo de resolución de direcciones es el encargado de realizar estas traducciones. A grandes rasgos todos los adaptadores de red tendrán un módulo ARP que recibirá una dirección IP y devolverá la dirección MAC correspondiente a ese equipo.
 La forma en la que funciona realmente ARP es muy similar a DNS, con la diferencia de que ARP resuelve las correspondencias entre direcciones IP y MAC de nodos pertenecientes a una misma subred. Cada nodo en la subred tiene en su memoria una ***tabla ARP***, que contiene las correspondencias entre direcciones IP y MAC, al igual que el tiempo de vida de este registro en la tabla. No todos los nodos de la subred cuentan con una entrada para corresponder a cada dispositivo de la subred, puede que solo contenga algunas correspondencias o directamente ni una.
 En caso de no se pueda resolver la correspondencia a través de la tabla ARP, el emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicándole que el paquete será enviado a través de un broadcast MAC. El adaptador de red encapsula el paquete en una trama y lo envía a los demás nodos de la subred. Los demás nodos reciben la trama, la desempaquetan y pasa el paquete al módulo ARP donde se verifica si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente de este modo, el emisor recibirá este mensaje actualizará su tabla ARP y podrá comenzar a enviar las tramas. En caso de la correspondencia no se pueda llevar a cabo, el paquete es descartado.
+
+>[!tldr] Reverse Address Resolution Protocol (RARP)
+>RARP realiza la tarea opuesta a ARP, determinando la dirección IP de un dispositivo a partir de su dirección MAC. Su propósito principal es permitir que dispositivos sin disco, obtengan su dirección IP al arrancar, ya que estos dispositivos no pueden almacenar configuraciones de red de manera permanente. RARP es menos común hoy en día, ya que ha sido reemplazado por protocolos más avanzados como DHCP.
