--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -1,6 +1,6 @@
 ## Estándar IEEE 802 para Redes de Área Local
 Los protocolos definidos específicamente para la transmisión en redes LAN y MAN tratan cuestiones relacionadas con la transmisión de bloques de datos a través de la red. Según OSI, los protocolos de capas de red y superiores son independientes de la arquitectura de red y son aplicables a cualquier tipo de red. Así pues, el estudio de protocolos LAN está relacionado con las capas inferiores del modelo OSI.
-El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física del modelo 802 incluye una especificación del medio de transmisión y de la topología. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
+El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física definida por este estándar incluye una especificación del los medios de transmisión y la topología de la red. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
 
 >[!info] Redes de Contienda
 >Todas las redes de área local pueden ser consideradas ***redes de contienda***, puesto que los múltiples usuarios o dispositivos que forman parte de la misma compiten continuamente por el acceso y uso de un recurso compartido, como lo puede ser el ancho de banda del médio de transmisión. Este tipo de redes pueden experimentar congestión y colisiones, lo que afecta el rendimiento y la eficiencia de la transmisión de datos.
@@ -11,7 +11,7 @@ Por encima de la capa física se encuentran las funciones asociadas a los servic
 3. Control de acceso a los medios de transmisión compartido.
 4. Interfaz con las capas superiores, control de errores y de flujo.
 
-Estas funciones se asocian generalmente a la capa del enlace de datos, la cual de acuerdo al estándar se divide en dos sub capas. La capa de ***control de enlace lógico (LLC)*** que se encarga de brindar los servicios descritos en el último ítem, y la capa de ***control de acceso al medio (MAC)*** que se encarga de ofrecer el resto de prestaciones. Esta separación de funciones se debe a las siguientes razones:
+Estas funciones se asocian generalmente a la capa del enlace de datos, la cual de acuerdo al estándar se divide en dos subcapas. La capa de ***control de enlace lógico (LLC)*** que se encarga de brindar los servicios descritos en el último ítem, y la capa de ***control de acceso al medio (MAC)*** que se encarga de ofrecer el resto de prestaciones. Esta separación de funciones se debe a las siguientes razones:
 1. La lógica necesaria para la gestión del acceso a un medio compartido no se encuentra tradicionalmente en la capa de enlace de datos.
 2. Cada tipo de red LAN ofrece un formato de trama MAC distinta para el mismo LLC.
 
@@ -25,7 +25,7 @@ La capa de *control de enlace lógico* es similar en varios aspectos a otras cap
 2. La capa de control de acceso al medio lo descarga de algunos detalles de acceso al enlace físico.
 
 El direccionamiento en este caso implica la especificación de un origen y destino. Las direcciones que se utilizan en la capa de control de enlace lógico, se denominan ***puntos de acceso al servicio (SAP)***.
-El protocolo LLC brinda todos los [[4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos#Servicios de Transmisión|servicios de transmisión]] mencionados en la introducción a la capa de enlace de datos. Este protocolo es muy similar a HDLC, aun así poseen sus diferencias. En términos generales una trama estaría conformada de la siguiente manera:
+El protocolo LLC brinda todos los [[4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos#Servicios de Transmisión|servicios de transmisión]] mencionados en la introducción a la capa de enlace de datos. En términos generales una trama estaría conformada de la siguiente manera:
 
 ![[formato-trama-llc.png]]
 
@@ -35,8 +35,8 @@ Los campos ***DSAP*** (Destination Service Access Point) y ***SSAP*** (Source Se
 >La capa de control de enlace lógico es sumamente importante, ya que es la encargada de abstraer los diferentes formatos de tramas MAC.
 
 ### Capa de Control de Acceso al Medio (MAC)
-Todas las redes LAN y MAN constan de un conjunto de dispositivos que deben compartir la capacidad de transmisión de la red, de manera que se requiere algún método de control de acceso al medio con objeto de hacer un uso eficiente del medio físico. Esta es la función del protocolo de control de acceso al medio.
-El control de acceso de los dispositivos al medio físico se puede realizar de forma centralizada o distribuida. A su vez la capa de control de acceso al medio debe encargarse de como se transmitirán los datos al medio, es decir, si se utilizan técnicas de transmisión síncronas o asíncronas.
+Todas las redes LAN y MAN constan de un conjunto de dispositivos que deben compartir la capacidad de un único medio de transmisión, de manera que se requiere algún método de control de acceso al medio que permita un uso eficiente del medio físico. Esta es la función del protocolo de control de acceso al medio.
+El control de acceso al medio se puede realizar de forma centralizada o distribuida. A su vez la capa de control de acceso al medio debe encargarse de como se transmitirán los datos al medio, es decir, si se utilizan técnicas de transmisión síncronas o asíncronas.
 Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar funciones relacionadas con el acceso al medio y la transmisión de datos. Para conseguir esto se encapsulan los mensajes LLC en una trama, cuyo formato varían de acuerdo al protocolo MAC al que se haga referencia.
 
 >[!tldr] Formato Genérico de Trama MAC
@@ -117,7 +117,7 @@ El funcionamiento básico de una red Token Ring se basa en el uso del token para
 Los repetidores en un anillo Token Ring tienen dos estados principales: el estado de escucha y el estado de transmisión. En el estado de escucha, el repetidor retransmite los datos que recibe, mientras que en el estado de transmisión, retransmite los datos de la estación a la que está conectado. Existe también un tercer estado, conocido como cortocircuito (bypass), que permite que las señales propagadas atraviesen el repetidor sin retraso, mejorando las prestaciones y proporcionando una solución parcial al problema de fiabilidad.
 El sistema requiere mecanismos de mantenimiento, como la supervisión de la existencia del token para asegurar que siempre haya uno en circulación y que no haya duplicados, lo cual es crítico para el funcionamiento correcto de la red.
 ## Redes de Área Local Virtuales (VLAN)
-Muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
+Muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien, presentan una serie de desventajas:
 - **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
 - **Uso ineficiente de los conmutadores**. Si una institución tiene 10 grupos, entonces se necesitarían 10 conmutadores de primer nivel. Si cada uno de los grupos es pequeño, entonces un único conmutador con los puertos suficientes para acomodar a todo el mundo, pero este único conmutador no proporcionaría la funcionalidad de aislamiento del tráfico.
 - **Gestión de los usuarios**. Si un empleado se mueve entre grupos, el cableado físico debe modificarse para conectar al empleado a un conmutador diferente, esto se torna más complejo si los empleados pertenecen dos o más grupos.
@@ -140,7 +140,7 @@ Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar un
 
 Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a traslados, adiciones y cambios en la red, un mejor control de multidifusión (broadcast) y una mayor seguridad tanto a nivel de grupo de trabajo como de red. Sin embargo, también presentan ciertas desventajas, como la necesidad de una configuración cuidadosa por software y el hecho de que cada switch o router debe invertir recursos de procesamiento para revisar el etiquetado de cada trama VLAN.
 ### Configuración de una VLAN
-Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración. Existen varias formas de asignar estaciones de trabajo a una VLAN:
+Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas existen varias formas de asignar estaciones de trabajo a una VLAN determinada:
 - **Por puertos o interfaz**: Cada puerto del conmutador se asigna manualmente a una VLAN. Este es el método más común y que hemos mencionado anteriormente.
 - **Por dirección física**: Se asignan las estaciones a las VLAN basándose en las direcciones MAC de los dispositivos conectados. El conmutador mantiene una tabla donde se especifica qué dirección MAC corresponde a cada VLAN.
 - **Por protocolo**: Se asignan las VLAN en función del protocolo que utiliza cada estación. El conmutador asigna a la VLAN correspondiente según el protocolo que reconoce.
