--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -1,18 +1,16 @@
 El éxito en la transmisión de datos depende fundamentalmente de dos factores fundamentales la calidad de la señal que se transmite y las características del medio de transmisión. Toda comunicación entre dos nodos se realiza a través de un medio de transmisión, los cuales pueden clasificarse como medios guiados y medios no guiados.
-En los medios guiados, las ondas se transmiten confinándolas a lo largo de un camino físico. Por el contrario, los medios no guiados, también denominados inalámbricos, proporcionan un medio para transmitir las ondas electromagnéticas sin confinarlas, como por ejemplo en la propagación a través del aire, el mar o el vacío.
 
 >[!note] Limitaciones en la Comunicación de Señales Electromagnéticas
 >Tanto los datos analógicos como los digitales se pueden transmitir usando señales analógicas o digitales. Es más, esto es ampliable al procesamiento intermedio que se haga entre la fuente y el destino, pudiendo ser igualmente analógico o digital.
 
 Un medio de transmisión puede ser ***simplex***, ***half-duplex*** o ***full-duplex***. En la transmisión simplex, las señales se transmiten solo en una única dirección. En los medios de transmisión half-duplex, ambas estaciones pueden transmitir, pero no simultáneamente. En full-duplex, ambas estaciones pueden igualmente transmitir y recibir, pero ahora simultáneamente.
 
->[!tldr] Enlaces Directos, medios Punto a Punto y Multipunto
+>[!tldr] Enlaces Directos, Medios Punto a Punto y Multipunto
 >El término ***enlace directo*** se usa para designar un camino de transmisión entre dos dispositivos en el que la señal se propague directamente del emisor al receptor sin ningún otro dispositivo intermedio que no sea un amplificador o repetidor.
->Un medio de transmisión guiado es punto a punto si proporciona un enlace directo entre dos dispositivos que comparten el medio y no existiendo ningún otro dispositivo conectado. En una configuración guiada multipunto, el mismo medio es compartido por más de dos dispositivos.
+>Un medio de transmisión guiado es punto a punto si proporciona un enlace directo entre dos dispositivos que comparten el medio y no existiendo ningún otro dispositivo conectado. Por otro lado, en una configuración guiada multipunto, el mismo medio es compartido por más de dos dispositivos.
 
 ## Frecuencias, Espectro y Ancho de Banda
-Las señales transmitidas pueden representarse como una función dependiente del tiempo. Aunque alternativamente se puede representar en función de la frecuencia, es decir, como una combinación de componentes a diferentes frecuencias. Para comprender y caracterizar mejor el comportamiento de los sistemas de transmisión de datos, el análisis en el ***dominio de la frecuencia*** suele ser más ilustrativo que en el ***dominio del tiempo***.
-En este contexto una ***señal analógica*** es aquella en la que la intensidad de la señal varía suavemente en el tiempo. Es decir, no presenta saltos o discontinuidades. Por el contrario, una ***señal digital*** es aquella en la que la intensidad se mantiene constante durante un determinado intervalo de tiempo, tras el cual la señal cambia a otro valor constante.
+Una ***señal analógica*** es aquella en la que la intensidad de la señal varía suavemente en el tiempo. Es decir, no presenta saltos o discontinuidades. Por el contrario, una ***señal digital*** es aquella en la que la intensidad se mantiene constante durante un determinado intervalo de tiempo, tras el cual la señal cambia a otro valor constante.
 
 >[!tldr] Señales Periódicas
 >Las ***señales periódicas*** son el tipo de señales más sencillas que se caracterizan por contener un patrón que se repite a lo largo del tiempo. La onda seno es una de las señales periódicas por antonomasia. Una onda seno genérica se representa mediante tres parámetros:
@@ -23,7 +21,7 @@ En este contexto una ***señal analógica*** es aquella en la que la intensidad 
 >
 >La ***longitud de onda***, denotada como $\lambda$, se define como la distancia que ocupa un ciclo o en otras palabras, la distancia entre dos puntos de igual fase en dos ciclos consecutivos.
 
-En la práctica, las señales electromagnéticas pueden estar compuestas por múltiples frecuencias. Utilizando el análisis de Fourier, se demuestra que cualquier señal puede descomponerse en componentes sinusoidales de diferentes frecuencias. Al combinar un número adecuado de señales sinusoidales, cada una con su propia amplitud, frecuencia y fase, es posible reconstruir cualquier señal electromagnética.
+En la práctica, las señales electromagnéticas pueden estar compuestas por elementos a múltiples frecuencias. Utilizando el análisis de Fourier, se demuestra que cualquier señal puede descomponerse en componentes sinusoidales de diferentes frecuencias. Al combinar un número adecuado de señales sinusoidales, cada una con su propia amplitud, frecuencia y fase, es posible reconstruir cualquier señal electromagnética.
 Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha, esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
 ### Velocidad de Transmisión, Ancho de Banda y Capacidad de Canal
 El ***ancho de banda efectivo*** se define como la banda de frecuencias en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
@@ -51,7 +49,7 @@ $$C = B \times log_{2} \ (1 + SNR)$$
 
 Donde $C$ es la capacidad del canal en bits por segundos y $B$ el ancho de banda del canal en hercios. Shannon probó que si la velocidad de información real en el canal es menor que la capacidad libre de errores, entonces es teóricamente posible encontrar una codificación de la señal que consiga una transmisión exenta de errores a través del canal.
 ## Transmisión de Datos Analógicos y Digitales
-Cuando hablamos de datos nos estamos refiriendo a una entidad capaz de transportar información. En el contexto de los medios físicos, las señales son la representación eléctrica o electromagnética de los datos, mientras que la ***señalización*** es el hecho de propagar dichas señales a través de un medio físico. Cuando hablamos de transmisión nos estamos refiriendo al proceso de comunicación de datos a través de la propagación y procesamiento de señales.
+Cuando hablamos de datos nos estamos refiriendo a una entidad capaz de transportar información. Las señales son la representación eléctrica o electromagnética de los datos y la ***señalización*** es el hecho de propagar dichas señales a través de un medio físico. Cuando hablamos de transmisión nos estamos refiriendo al proceso de comunicación de datos a través de la propagación y procesamiento de señales.
 En un sistema de comunicaciones, los datos se propagan de un punto a otro mediante señales electromagnéticas. Una señal analógica es una onda electromagnética que varía continuamente y que, según sea su espectro, puede propagarse a través de una serie de medios ya sean guiados o no guiados. Mientras que una señal digital es una secuencia de pulsos de tensión que se puede transmitir a través de un medio conductor.
 
 >[!info] Las Señales Digitales
