[Refactor] a little correction

--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -3,7 +3,7 @@ Los protocolos definidos específicamente para la transmisión en redes LAN y MA
 El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física definida por este estándar incluye una especificación del los medios de transmisión y la topología de la red. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
 
 >[!info] Redes de Contienda
->Todas las redes de área local pueden ser consideradas ***redes de contienda***, puesto que los múltiples usuarios o dispositivos que forman parte de la misma compiten continuamente por el acceso y uso de un recurso compartido, como lo puede ser el ancho de banda del médio de transmisión. Este tipo de redes pueden experimentar congestión y colisiones, lo que afecta el rendimiento y la eficiencia de la transmisión de datos.
+>Todas las redes de área local pueden ser consideradas ***redes de contienda***, puesto que los múltiples usuarios o dispositivos que forman parte de la misma compiten continuamente por el acceso y uso de un recurso compartido, como lo puede ser el ancho de banda del medio de transmisión. Este tipo de redes pueden experimentar congestión y colisiones, lo que afecta el rendimiento y la eficiencia de la transmisión de datos.
 
 Por encima de la capa física se encuentran las funciones asociadas a los servicios ofrecidos a los usuarios LAN. Entre ellas se encuentran las siguientes:
 1. La transmisión y ensamblado de datos en tramas con campos de dirección y de detección de errores.
