--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -71,7 +71,7 @@ A diferencia de CSMA/CD, que detecta colisiones, CSMA/CA intenta evitarlas desde
 
 >[!note] Uso de la Espera Exponencial Binaria en CSMA/CA
 >Cuando un dispositivo detecta que el canal está ocupado o no recibe una confirmación después de una transmisión, entra en un periodo de contención, donde espera una cantidad aleatoria de tiempo.
->Cuando la transmisón resulte exitosa, la ventana de contención se restablece a su valor mínimo, permitiendo que el dispositivo vuelva a intentar transmitir rápidamente en el futuro.
+>Cuando la transmisión resulte exitosa, la ventana de contención se restablece a su valor mínimo, permitiendo que el dispositivo vuelva a intentar transmitir rápidamente en el futuro.
 ## Ethernet
 Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son las basadas en Ethernet, desarrolladas por el comité de estándares IEEE 802.3. Como ya mencionamos anteriormente cada protocolo MAC implementa a su manera el control de acceso al medio, Ethernet concretamente utiliza la técnica conocida como ***CSMA/CD***.
 
