--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -39,7 +39,7 @@ Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden se
 >
 >En este caso $M$ es el número de señales en las que se divide cada cambio de estado. Si bien esta fórmula establece las bases para el cálculo de la capacidad del canal, como no tiene en cuenta el ruido no la taza de error, en la práctica esta ecuación se utiliza para calcular la capacidad teórica del canal.
 
-Existe una relación entre la velocidad de transmisión, el ruido y la tasa de error, puesto que si se aumenta la velocidad de transmisión, la cantidad de bits transmitidos aumentas, de tal manera que dado un patrón de ruido, este afectará a un mayor número de bits. Así pues, dado un nivel de ruido, cuanto mayor es la velocidad de transmisión, mayor es la tasa de errores. Shannon estudió la ***relación señal-ruido (SNR)*** definiéndola matemáticamente a través de la siguiente fórmula:
+Existe una relación entre la velocidad de transmisión, el ruido y la tasa de error, puesto que si se aumenta la velocidad de transmisión, la cantidad de bits transmitidos aumenta, de tal manera que dado un patrón de ruido, este afectará a un mayor número de bits. Así pues, dado un nivel de ruido, cuanto mayor es la velocidad de transmisión, mayor es la tasa de errores. Shannon estudió la ***relación señal-ruido (SNR)*** definiéndola matemáticamente a través de la siguiente fórmula:
 $$SNR_{dB} = 10 \times log_{10} \ \frac{S}{R}$$
 
 Donde $S$ es la potencia de la señal y $R$ es la potencia del ruido. Esta expresión muestra, en decibelios, cuánto excede la señal al nivel de ruido. Una SNR alta significará una señal de alta calidad y, por tanto, la necesidad de un número reducido de repetidores.
